# CardsBot

./: .env.example  .gitignore  LICENSE  docker-compose.yaml  dockerfile  hello.py  init_db.sh  main.py  pyproject.toml  readme.md  requirements.txt
data/: config.json  limited_config.json  text.py
database/: __init__.py  bonus_link.py  cards.py  group.py  models.py  premium.py  promo.py  ref_link.py  statistic.py  top.py  user.py
filters/: CardFilter.py  FloodWait.py  NotCommentFilter.py  ProfileFilter.py  __init__.py
handlers/: __init__.py  commands.py  payment.py  premium.py  profile.py  shop.py  shopcards.py  triggers.py
handlers/admin_dialogs/: __init__.py  admin_states.py
handlers/admin_dialogs/add_admin_dialogs/: add_admin_dialog.py
handlers/admin_dialogs/ban_dialogs/: __init__.py  ban_dialog.py  unban_dialog.py
handlers/admin_dialogs/base_dialogs/: __init__.py  admin_dialog.py  change_nickname_dialog.py  mailing_dialog.py  premium_dialog.py  season_delete_dialog.py
handlers/admin_dialogs/promo_dialogs/: __init__.py  create_promo_dialog.py  delete_promo_dialog.py
handlers/admin_dialogs/ref_link_dialogs/: __init__.py  ref_links_add_dialog.py  ref_links_view_dialog.py
middlewares/: channelBlockMiddleware.py  register_middlewares.py
utils/: config.py  kb.py  logger.py  mailing.py  payment.py  states.py
